Created AbstractPageObject and BaseTest

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-This file was created by IntelliJ IDEA 11.0.2 for binding GitHub repository
-This file was modified by IntelliJ IDEA 11.0.2 for binding GitHub repository
+This project is an example of building a WebDriver framework using Gradle and TestNG.
+
+It extends the basic tutorial found on the Selenium Wiki
