--- a/README
+++ b/README
@@ -17,11 +17,17 @@ cd ~/<checkout dir>/page-objects
 
 -- Building the Page Objects
 
-You can use the PageFactory helper to define your locators but I prefer to store them as By objects.
+You can use the PageFactory helper to define your locators
+
+http://code.google.com/p/selenium/wiki/PageFactory
+
+However, I prefer to store them as By objects
+
 There are several reasons for this:
 
 - The WebElement will get looked up each time you use the locator which can help avoid stale elememt exceptions
 - You can use your locators in methods that assert the presence or absence of a WebElemnt (return driver.findElements(By.yourLocator)size() < 0)
+- Personally I think they look cleaner in the code
 
 -- Running the tests using Gradle
 
