--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This project is an example of building a WebDriver framework using Gradle and TestNG with InteliJ or Eclipse.
 
-It extends the basic tutorial found on the Selenium Wiki and runs a couple of tests against StackOverFlow.
+It extends the basic tutorial found on the Selenium Wiki and runs a couple of tests against Stack Overflow.
 
 http://code.google.com/p/selenium/wiki/GettingStarted
 http://code.googles.com/p/selenium/wiki/PageObjects
