more README updates

--- a/README
+++ b/README
@@ -26,8 +26,7 @@ cd ~/<checkout dir>/page-objects
 If you don't want to use Gradle you can also do this manually, as explained here by Simon Stewart aka The WebDriver guy.
 http://www.youtube.com/watch?v=Eft3qGFoqwE
 
-If you want to update the version of Selenium or TestNG you are using just update the version numbers in
-build.gradle and rerun the above commands to regenerate your project.
+If you want to update the version of Selenium or TestNG you are using just update the version numbers in build.gradle and rerun the above commands to regenerate your project.
 
 -- Writing the Tests
 
