--- a/README
+++ b/README
@@ -58,7 +58,7 @@ Right click on the test and select 'run' or 'debug'
 
 -- Running the tests using Gradle
 
-To run all tests
+To run all tests (uses Firefox by default)
 ./gradlew clean test
 
 To run only tests belonging to group 1 (as defined in the includegroup1 task in build.gradle)
