--- a/README
+++ b/README
@@ -61,6 +61,10 @@ Right click on the test and select 'run' or 'debug'
 To run all tests (uses Firefox by default)
 ./gradlew clean test
 
+To run a single test class
+
+./gradle clean test -Dtest.single="ExampleTest"
+
 To run only tests belonging to group 1 (as defined in the includegroup1 task in build.gradle)
 ./gradlew clean includegroup1
 
