--- a/README
+++ b/README
@@ -29,7 +29,8 @@ http://www.youtube.com/watch?v=Eft3qGFoqwE
 
 If you want to update the version of Selenium or TestNG you are using just update the version numbers in build.gradle and rerun the above commands to regenerate your project.
 
--- Writing the Tests
+Writing the Tests
+-----------------
 
 I find using a Test Driven (Test) Development approach works well here.
 - Write the test
@@ -39,7 +40,8 @@ I find using a Test Driven (Test) Development approach works well here.
 
 Note also that the tests don't know anything about WebDriver .... keep it that way!
 
--- Building the Page Objects
+Building the Page Objects
+-------------------------
 
 You can use the PageFactory helper to define your locators
 
@@ -53,11 +55,13 @@ There are several reasons for this:
 - You can reuse your locators in methods that assert the presence or absence of a WebElement (return driver.findElements(yourByObjectLocator).size() > 0)
 - Personally I think they look cleaner in the code
 
--- Running the tests via the IDE
+Running the tests via the IDE
+-----------------------------
 
 Right click on the test and select 'run' or 'debug'
 
--- Running the tests using Gradle
+Running the tests using Gradle
+------------------------------
 
 Unless you have Gradle installed, you'll need to use the Gradle wrapper which is included in the project
 ./gradlew or gradle.bat on Windows
